# blackhole-simulation-wasm-rust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  azure.yaml  docker-compose.yml  index.html  nginx.conf  serve.sh  style.css
infra/: main.bicep  resources.bicep
src/: camera.rs  lib.rs  renderer.rs
src/shaders/: blackhole.wgsl  blit.wgsl
