[package]
name = "blackhole-simulation"
version = "0.1.0"
edition = "2021"
authors = ["Kerr Black Hole Simulation"]
description = "Real-time Kerr black hole visualization using WebGPU"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]
webgpu = []

[dependencies]
wgpu = { version = "23.0", features = ["webgpu"] }
winit = { version = "0.30", features = ["rwh_06"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
log = "0.4"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "EventTarget",
    "AddEventListenerOptions",
    "console",
    "Performance",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

# Native-only dependencies for offline renderer
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.25"
rayon = "1.10"

[[bin]]
name = "offline_render"
path = "src/bin/offline_render.rs"

[[bin]]
name = "gpu_render"
path = "src/bin/gpu_render.rs"

[profile.release]
opt-level = 3
lto = true
